[project]
name = "dl4bi"
version = "0.1.3"
description = "Deep Learning for Bayesian Inference (DL4BI)"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "arviz>=0.23.4,<0.24.0",
  "dl4bi-sps>=0.1.2,<1",
  "einops>=0.8,<1",
  "flax>=0.12,<0.13",
  "geopandas>=1.1.3,<2.0.0",
  "hydra-core>=1.3,<2",
  "jraph==0.0.6.dev0",
  "matplotlib>=3.10,<4",
  "numpy>=2.2,<3",
  "numpyro>=0.21.0,<0.22.0",
  "optax>=0.2,<0.3",
  "orbax-checkpoint>=0.11,<1",
  "scikit-learn>=1.7,<2",
  "scipy>=1.15,<2",
  "scoringrules>=0.7,<1",
  "seaborn>=0.13.2,<0.14.0",
  "tqdm>=4.67,<5",
  "wandb>=0.22,<1",
]

[project.optional-dependencies]
benchmarks = [
  "arviz>=0.20,<1",
  "cdsapi>=0.7,<1",
  "datasets>=3.5,<4",
  "geopandas>=1.1.3,<2.0.0",
  "numpyro>=0.14,<1",
  "pandas>=2.3,<3",
  "pillow>=11.1,<12",
  "rapidfuzz>=3.14.3,<4.0.0",
  "requests>=2.33.0,<3.0.0",
  "seaborn>=0.13.2,<0.14.0",
  "shapely>=2.1.2,<3.0.0",
  "tensorflow>=2.21.0,<3.0.0",
  "tensorflow-datasets>=4.9.9,<5.0.0",
  "tiktoken>=0.8,<1",
  "ucimlrepo>=0.0.7,<1",
  "xarray>=2025.9,<2026",
]
cpu = [
  "jax>=0.8.1,<0.9",
]
cuda12 = [
  "jax[cuda12]>=0.8.1,<0.9",
]
cuda13 = [
  "jax[cuda13]>=0.8.1,<0.9",
]

[dependency-groups]
dev = [
  "dl4bi",
  "pre-commit>=4.0,<5",
  "pytest>=7.4,<8",
]

[tool.uv]
add-bounds = "major"
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda12" },
    { extra = "cuda13" },
  ],
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
dl4bi = { workspace = true, editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
